added routing for the components

--- a/src/app/MyComponent/footer/footer.component.html
+++ b/src/app/MyComponent/footer/footer.component.html
@@ -11,7 +11,7 @@
         <div class="col-md-4">
   
           <!-- Content -->
-          <h5 class="text-uppercase">Kitchen Story</h5>
+          <h5 class="text-uppercase">Food Box</h5>
   
   
           <p>Vanish your hunger!</p>
