--- a/src/app/MyComponent/nav-bar/nav-bar.component.html
+++ b/src/app/MyComponent/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav *ngIf="this.service2.getState()=='main'" class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a style="margin-left: 5%;" class="navbar-brand" href="#">Kitchen Story</a>
+  <a style="margin-left: 5%;" class="navbar-brand" href="#">Food Box</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
 
 
 <nav *ngIf="this.service2.getState()=='admin'" class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a style="margin-left: 5%;" class="navbar-brand" href="#">Kitchen Story</a>
+  <a style="margin-left: 5%;" class="navbar-brand" href="#">Food Box</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
 
  <!-- user nav bar -->
 <nav *ngIf="this.service2.getState()=='user' " class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a style="margin-left: 5%;" class="navbar-brand" href="#">Kitchen Story</a>
+  <a style="margin-left: 5%;" class="navbar-brand" href="#">Food Box</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
