--- a/src/app/MyComponent/main/main.component.html
+++ b/src/app/MyComponent/main/main.component.html
@@ -2,13 +2,13 @@
 <div class="container">
 
 	<form (ngSubmit)="search()" class="d-flex">
-		
+
 			<input name="search" [(ngModel)]="searchProduct" class="form-control mr-sm-4" type="search"
 				placeholder="Search" aria-label="Search">
-		
-		
+
+
 			<button class="btn btn-outline-success my-3 my-sm-0" type="submit">Search</button>
-		
+
 	</form>
 </div>
 
@@ -25,17 +25,17 @@
 		<!-- Slideshow -->
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="/assets/images/img3.jpg" alt="Slide 1" height="300">
+				<img class="d-block w-100" src="/assets/images/img3.jpg" alt="Slide 1" height="400">
 				<div class="carousel-caption">
-					<h1> Kitchen Story</h1>
+					<h1> Food Box</h1>
 					<p></p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="/assets/images/food6.png" alt="Slide 2" height="300">
 				<div class="carousel-caption">
-					<h1>Second Slide</h1>
-					<p>This is the second slide.</p>
+					<h1>Tasty Food</h1>
+					<p></p>
 				</div>
 			</div>
 			<div class="carousel-item">
