--- a/src/app/MyComponent/nav-bar/nav-bar.component.html
+++ b/src/app/MyComponent/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="this.service2.getState()=='main'" class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav *ngIf="this.service2.getState()=='main'" class="navbar navbar-expand-lg navbar-dark bg-danger">
   <a style="margin-left: 5%;" class="navbar-brand" href="#">Food Box</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -6,7 +6,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
 
-    
+
     <ul class="navbar-nav">
       <li style="margin-left: 10%;">
         <a class="nav-link btn btn-warning text-black">Dashboard</a>
@@ -58,8 +58,8 @@
     </ul>
 
     <ul  style="margin-left: 57%;" class="nav navbar-nav navbar-right">
-     
-       
+
+
       <li>
         <a class="nav-link" routerLink="/" (click)="signOut()">SignOut</a>
       </li>
