Added My Orders section at user area

--- a/src/app/MyComponent/footer/footer.component.html
+++ b/src/app/MyComponent/footer/footer.component.html
@@ -1,80 +1,80 @@
 <!-- Footer -->
-<div style="background-color: rgb(111, 156, 149); margin-top: 20px;" class="page-footer font-small pt-4">
+<div style="background-color: rgb(34, 41, 41); margin-top: 20px;" class="page-footer font-small pt-4">
 
     <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
-  
+
       <!-- Grid row -->
       <div class="row">
-  
+
         <!-- Grid column -->
         <div class="col-md-4">
-  
+
           <!-- Content -->
-          <h5 class="text-uppercase">Food Box</h5>
-  
-  
-          <p>Vanish your hunger!</p>
-  
+          <h5 style="color: aliceblue;" class="text-uppercase">Food Box</h5>
+
+
+          <p style="color: aliceblue;">Vanish your hunger!</p>
+
         </div>
         <!-- Grid column -->
-  
+
         <hr class="clearfix w-100 d-md-none pb-3">
-  
+
         <!-- Grid column -->
         <div class="col-md-4">
-  
+
           <!-- Links -->
-          <h5 class="text-uppercase">Mohd Aasim Ansari</h5>
-  
+          <h5 style="color: aliceblue;" class="text-uppercase">Mohd Aasim Ansari</h5>
+
           <ul class="list-unstyled">
             <li>
-              <a style="color: rgb(103, 41, 8);" href="#">asimjazah8@gmail.com</a>
+              <a style="color: rgb(196, 167, 152);" href="#">asimjazah8@gmail.com</a>
             </li>
             <li>
-              <a style="color: rgb(103, 41, 8);" href="#">linkedIn</a>
+              <a style="color: rgb(196, 167, 152);" href="#">linkedIn</a>
             </li>
             <li>
-              <a style="color: rgb(103, 41, 8);" href="#">instagram</a>
+              <a style="color: rgb(196, 167, 152);" href="#">instagram</a>
             </li>
           </ul>
-  
+
         </div>
         <!-- Grid column -->
-  
+
         <!-- Grid column -->
         <div class="col-md-4">
-  
+
           <!-- Links -->
-          <h5 class="text-uppercase">Mohammad Saad</h5>
-  
+          <h5 style="color: aliceblue;" class="text-uppercase">Mohammad Saad</h5>
+
           <ul class="list-unstyled">
             <li>
-              <a style="color: rgb(103, 41, 8);" href="#">mohammadsaad7500@gmail.com</a>
+              <a style="color: rgb(196, 167, 152);" href="#">mohammadsaad7500@gmail.com</a>
             </li>
             <li>
-              <a style="color: rgb(103, 41, 8);" href="https://in.linkedin.com/in/mohammadsaad7500">linkedIn</a>
+              <a style="color: rgb(196, 167, 152);" href="https://in.linkedin.com/in/mohammadsaad7500">linkedIn</a>
             </li>
             <li>
-              <a style="color: rgb(103, 41, 8);" href="https://www.instagram.com/saad_haroon7/">instagram</a>
+              <a style="color: rgb(196, 167, 152);" href="https://www.instagram.com/saad_haroon7/">instagram</a>
             </li>
           </ul>
-  
+
         </div>
         <!-- Grid column -->
-  
+
       </div>
       <!-- Grid row -->
-  
+
     </div>
     <!-- Footer Links -->
-  
+
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2022 Copyright:
-      <a style="color: rgb(103, 41, 8);" href="#"> KitchenStory.com</a>
+    <div style="color: aliceblue;" class="footer-copyright text-center py-3">© 2022 Copyright:
+      <a style="color: rgb(212, 202, 196);" href="#"> FoodBox.com</a>
     </div>
     <!-- Copyright -->
-  
+
   </div>
   <!-- Footer -->
-  
+
